Fixed broken favicon imports and added some missing padding to last blog entry to make up for footer height

--- a/blog/css/2026-01-22.css
+++ b/blog/css/2026-01-22.css
@@ -5,7 +5,7 @@ html * {
 body {
   font-size: small;
   background: radial-gradient(rgb(232, 212, 212), rgb(207, 207, 238));
-  height: 90vh;
+  padding-bottom: 30px;
 }
 
 #container {
